[package]
name = "lorembarnak-rs"
version = "0.1.0"
authors = ["Cédric Taschereau <cedric.taschereau@boreal-is.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
regex = "1.4.2"
lazy_static = "1.4.0"
